fixed typing animation on banner a bit to make it better on mobile.

--- a/src/pages/scss/banner.module.scss
+++ b/src/pages/scss/banner.module.scss
@@ -18,16 +18,16 @@ body {
   font-family: 'Poppins', 'sans-serif';
   font-weight: 500;
   color: $baseTextColor;
-  font-size: 6vw;
+  font-size: 4rem;
   letter-spacing: 5px;
   overflow: hidden;
   white-space: nowrap;
   border-right: 4px solid $baseTextColor;
 
   animation: 
-    type 2s steps(12), 
+    type 1.5s steps(12), 
     blinker 0.5s step-end alternate infinite 2s,
-    removeBorder 1s 3s forwards;
+    removeBorder 1s 1.5s forwards;
 }
 
 h3 {
@@ -39,7 +39,7 @@ h3 {
   left: 50%;
   transform: translate(-50%, 100%);
   font-family: 'Poppins', 'sans-serif';
-  font-size: 3vw;
+  font-size: 2rem;
   font-weight: 400;
   color: $accentColor;
   letter-spacing: 2px;
@@ -49,38 +49,32 @@ h3 {
   border-right: 4px solid $baseTextColor;
 
   animation: 
-    invisible 3s, 
-    typeh3 2s steps(18) 3s, 
+    invisible 1.75s, 
+    typeh3 2s steps(18) 1.5s, 
     blinker 0.5s step-end alternate infinite 3s;
-}
-
-/* If screen is greater than 480px and less than 796px, dont take whole screen*/
-@media screen and (min-height: 480px) and (max-height: 768px) {
-  
-  h3 {
-    animation: 
-      invisible 3.2s, 
-      typeh3 2s steps(20) 3s, 
-      blinker 0.5s step-end alternate infinite 3s;
-  }
-  
-  .name {
-    animation: 
-      type 2.7s steps(20), 
-      blinker 0.5s step-end alternate infinite 2s,
-      removeBorder 1s 3s forwards;
-  }
-
-
 }
 
 @media screen and (max-width: 480px) {
   .name {
-    font-size: 8vw;
+    font-size: 2rem;
   }
 
   h3 {
-    font-size: 4vw;
+    font-size: 1rem;
+  }
+
+  .name {
+    animation: 
+      type 1.3s steps(13), 
+      blinker 0.5s step-end alternate infinite 2s,
+      removeBorder 1s 1.3s forwards;
+  }
+
+  h3 {
+    animation: 
+      invisible 1.3s, 
+      typeh3 1.5s steps(15) 1.3s, 
+      blinker 0.5s step-end alternate infinite 3s;
   }
 }
 
@@ -107,8 +101,8 @@ h3 {
 
 @keyframes invisible {
   0%, 99.9% {
-    color: $backgroundColor;
-    border-color: $backgroundColor;
+    color: transparent;
+    border-color: transparent;
   }
   100% {
     color: $baseTextColor;
@@ -127,27 +121,5 @@ h3 {
     border-right: none;
     border-color: $backgroundColor;
   }
-}
-
-@keyframes stars {
-  0%, 20%, 40%, 60%, 80%, 100%
-  {
-    opacity: 0;
-  }
-  10%, 30%, 50%, 70%, 90%
-  {
-    opacity: 1;
-  }
-}
-
-@keyframes backgroundMove {
-  0%
-  {
-    transform: scale(1);
-  }
-  100%{
-    transform: scale(2);
-  }
-
 }
 
